2003-05-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-message.c (handle_multipart_mixed): Don't look at
	the subtype of the first_type unless we have already defined
	first_type. Fixes a crash.

	* gmime/gmime-multipart.c
	(g_mime_multipart_get_subpart_from_content_id): Don't return a
	const GMimeObject, ref it to be consistant with the rest of the
	API.

	* gmime/gmime-message-partial.c
	(g_mime_message_partial_split_message): Fixed an optimisation gone
	bad. Thanks to Piotr Klaban for reporting this.

2003-05-19  Jeffrey Stedfast  <fejj@ximian.com>

	* tests/test-mbox.c: Fixed a memory leak.

	* gmime/gmime-multipart-encrypted.c: Same as below.

	* gmime/gmime-multipart-signed.c: Fixed the prototype for
	write_to_stream().

2003-05-17  Jeffrey Stedfast  <fejj@ximian.com>

	* docs/reference/streams.sgml: Updated for correctness.

	* docs/reference/data-wrappers.sgml: Pretty much re-written to
	better explain GMimeDataWrapper.

	* gmime/gmime-session-simple.[c,h]: New simple instantiable class
	implementing the GMimeSession interfaces.

2003-04-30  Jeffrey Stedfast  <fejj@ximian.com>

	* tests/test-mime.c: Fixed some compile warnings.

	* src/uudecode.c: Fixed some compile warnings.

	* src/uuencode.c: Fixed some compile warnings.

	* gmime/gmime-parser.c (parser_scan_content): Initialise 'start'.

	* gmime/gmime-multipart-signed.c: #include <string.h>

	* gmime/gmime-message-part.c: #include <string.h>

	* gmime/gmime-filter-enriched.c: #include <stdlib.h> for strtoul.

	* gmime/gmime-charset.c (strdown): New function to lowercasify a
	string inline (rather than being lame and strdup'ing the bloody
	string like g_ascii_strdown does).

	* gmime/gmime-iconv.c: Turn off cache debugging.

2003-04-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_new): Initialise seen_eof1 to
	TRUE.
	(gpg_ctx_set_ostream): Set seen_eof1 to FALSE here, this way we
	only ever check for EOF for gpg's stdout if we care about the data