@@ -51,6 +51,7 @@ LDFLAGS=${_ldflags}
 
 dnl Checks for header files.
 AC_CHECK_HEADERS(sys/mman.h)
+AC_CHECK_HEADERS(sys/param.h)
 AC_CHECK_HEADERS(string.h)
 AC_CHECK_HEADERS(stdlib.h)
 AC_CHECK_HEADERS(netdb.h)
