@@ -25,9 +25,9 @@
 #include <config.h>
 #endif
 
+#include <string.h>
 #include <sys/types.h>
 #include <sys/stat.h>
-#include <string.h>
 #ifdef HAVE_SYS_MMAN_H
 #include <sys/mman.h>
 #endif
