@@ -1,3 +1,15 @@
+2003-05-22  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* configure.in: Check for sys/param.h
+
+	* gmime/gmime-stream-mmap.h: Removed sys/mman.h and unistd.h from
+	the #includes. These are needed in the ehader and will break the
+	build on win32.
+
+	* gmime/gmime-utils.c: Only #include sys/param.h if the system has
+	it. Also added unistd.h and sys/types.h as they should have been
+	there for pid_t.
+
 2003-05-21  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime/gmime-message.c (handle_multipart_mixed): Don't look at
